samples/_failures_safe/1761305660_f157ce_compile_base_compile_error/stderr.txt
./samples/SAFE/__tmp_f914e891.c: In function ‘main’:
./samples/SAFE/__tmp_f914e891.c:165:13: error: expected declaration or statement at end of input
  165 |             case 4:
      |             ^~~~
./samples/SAFE/__tmp_f914e891.c:165:13: error: expected declaration or statement at end of input
./samples/SAFE/__tmp_f914e891.c:165:13: error: expected declaration or statement at end of input
